# moving_media

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  backup.rs  config.rs  db.rs  hash.rs  lib.rs  main.rs  scanner.rs  watcher.rs
